@@ -1,0 +1,13 @@
+﻿// This code is part of the Fungus library (https://github.com/snozbot/fungus)
+// It is released for free under the MIT open source license (https://github.com/snozbot/fungus/blob/master/LICENSE)
+
+/*This script has been, partially or completely, generated by the Fungus.GenerateVariableWindow*/
+
+using UnityEditor;
+
+namespace Fungus.EditorUtils
+{
+    [CustomPropertyDrawer(typeof(ObjectData))]
+    public class ObjectDataDrawer : VariableDataDrawer<ObjectVariable>
+    { }
+}
